# mports

./: .cursorrules  .cvsignore  .gitignore  AGENTS.md  COPYRIGHT  GIDs  LEGAL  MOVED  Makefile  README  README.md  SECURITY.md  UIDs  UPDATING
.gemini/: settings.json
.hooks/: prepare-commit-msg
Licenses/: bsd1
Mk/: bsd.apache.mk  bsd.autotools.mk  bsd.ccache.mk  bsd.cmake.mk  bsd.commands.mk  bsd.database.mk  bsd.destdir.mk  bsd.gcc.mk  bsd.gecko.mk  bsd.gnome.mk  bsd.gnustep.mk  bsd.gstreamer.mk  bsd.java.mk  bsd.kde.mk  bsd.kde4.mk  bsd.linux-rpm.mk  bsd.mail.mk  bsd.mport.mk  bsd.perl.mk  bsd.php.mk  bsd.port.mk  bsd.port.post.mk  bsd.port.pre.mk  bsd.port.subdir.mk  bsd.python.mk  bsd.qt.mk  bsd.ruby.mk  bsd.sdl.mk  bsd.sites.mk  bsd.tcl.mk  bsd.wx.mk  bsd.xfce.mk  bsd.xorg.mk
Templates/: BSD.local.dist  README.category  README.port  README.top  config.site
Tools/: make_index  make_index_db  make_readmes
accessibility/: Makefile
ai/: Makefile
ai/codex/files/: patch-cargo-crates_v8-149.2.0_.gn  patch-cargo-crates_v8-149.2.0_build.rs  patch-cargo-crates_v8-149.2.0_build_config_compiler_BUILD.gn  patch-cargo-crates_v8-149.2.0_build_toolchain_freebsd_BUILD.gn  patch-cargo-crates_v8-149.2.0_build_toolchain_siso.gni  patch-cargo-crates_v8-149.2.0_third__party_icu_BUILD.gn  patch-cargo-crates_v8-149.2.0_third__party_partition__alloc_src_partition__alloc_stack_stack.cc  patch-v8_partition_alloc_libc_symbols.h
archivers/: Makefile
astro/: Makefile
audio/: Makefile
benchmarks/: Makefile
biology/: Makefile
cad/: Makefile
chinese/: Makefile
comms/: Makefile
converters/: Makefile
core/: Makefile
databases/: Makefile
deskutils/: Makefile
devel/: Makefile
devel/electron39/files/: apply-electron-patches.sh  patch-.gn  patch-build_config_linux_gtk_BUILD.gn  patch-build_config_linux_pkg-config.py  patch-buildtools_third__party_libc++_BUILD.gn  patch-chrome_browser_file__system__access_chrome__file__system__access__permission__context.h  patch-components_autofill_core_browser_form__parsing_autofill__scanner.h  patch-content_browser_child__process__launcher__helper__linux.cc  patch-content_public_common_BUILD.gn  patch-media_ffmpeg_scripts_robo__lib_config.py  patch-media_ffmpeg_scripts_robo__lib_config__makeinfo.py  patch-third__party_blink_renderer_bindings_scripts_bind_gen_style_format.py  patch-third__party_devtools-frontend_src_front__end_panels_timeline_fixtures_traces_BUILD.gn  patch-third__party_devtools-frontend_src_front__end_ui_components_docs_BUILD.gn  patch-third__party_electron__node_src_node__buffer.cc  patch-third__party_node_node.py  patch-third__party_test__fonts_BUILD.gn  patch-tools_gn_build_gen.py  patch-ui_shell__dialogs_select__file__dialog.h
devel/electron39/files/packagejsons/: package.json
devel/electron39/files/packagejsons/spec/: package.json
dns/: Makefile
editors/: Makefile
emulators/: Makefile
filesystems/: Makefile
finance/: Makefile
ftp/: Makefile
games/: Makefile
german/: Makefile
graphics/: Makefile
irc/: Makefile
japanese/: Makefile
java/: Makefile
lang/: Makefile
lang/v8/files/: patch-BUILD.gn  patch-build_config_BUILDCONFIG.gn  patch-build_config_compiler_BUILD.gn  patch-build_landmine__utils.py  patch-build_toolchain_gcc__toolchain.gni  patch-buildtools_third__party_libc++_BUILD.gn  patch-src_api_api.cc  patch-third__party_icu_icu.gyp  patch-third__party_icu_source_config.sub
mail/: Makefile
math/: Makefile
mbone/: Makefile
misc/: Makefile
misc/codex/files/: patch-cargo-crates_v8-146.4.0_build_toolchain_siso.gni  patch-cargo-crates_v8-146.4.0_third__party_partition__alloc_src_partition__alloc_stack_stack.cc  patch-cargo-crates_v8-147.4.0_build_toolchain_gcc__toolchain.gni  patch-cargo-crates_v8-147.4.0_build_toolchain_siso.gni  patch-cargo-crates_v8-147.4.0_third__party_partition__alloc_src_partition__alloc_stack_stack.cc  patch-cargo-crates_v8-149.2.0_build_config_BUILDCONFIG.gn  patch-cargo-crates_v8-149.2.0_build_config_clang_BUILD.gn  patch-cargo-crates_v8-149.2.0_build_config_linux_pkg-config.py  patch-cargo-crates_v8-149.2.0_build_config_sanitizers_sanitizers.gni  patch-cargo-crates_v8-149.2.0_build_toolchain_gcc__toolchain.gni  patch-cargo-crates_v8-149.2.0_buildtools_third__party_libc++_BUILD.gn  patch-cargo-crates_v8-149.2.0_third__party_abseil-cpp_absl_base_internal_sysinfo.cc  patch-cargo-crates_v8-149.2.0_v8_BUILD.gn  patch-cargo-crates_v8-149.2.0_v8_src_api_api.cc  patch-v8_partition_alloc_libc_symbols.h
multimedia/: Makefile
net/: Makefile
net-im/: Makefile
net-mgmt/: Makefile
net-p2p/: Makefile
news/: Makefile
palm/: Makefile
www/chromium/files/: patch-base__test__expectations__expectation.cc  patch-build_config_BUILDCONFIG.gn  patch-build_config_linux_pkg-config.py  patch-build_config_rust.gni  patch-build_config_sysroot.gni  patch-build_landmine__utils.py  patch-components_policy_resources_policy__templates.json  patch-components_policy_tools_generate__policy__source.py  patch-extensions_common_api___permission__features.json  patch-third__party_blink_renderer_bindings_scripts_bind__gen_style__format.py  patch-third__party_blink_renderer_platform_runtime__enabled__features.json5  patch-third__party_node_node.py  patch-third__party_wayland_features.gni  patch-tools_gn_build_gen.py  patch-tools_json__schema__compiler_feature__compiler.py  patch-tools_variations_fieldtrial__to__struct.py  patch-v8_BUILD.gn
www/qt6-webengine/files/: patch-src_3rdparty_chromium_build_config_BUILDCONFIG.gn  patch-src_3rdparty_chromium_build_config_linux_pkg-config.py  patch-src_3rdparty_chromium_build_linux_unbundle_opus.gn  patch-src_3rdparty_chromium_dbus_BUILD.gn  patch-src_3rdparty_chromium_extensions_common_api___permission__features.json  patch-src_3rdparty_chromium_third__party_blink_renderer_bindings_scripts_bind__gen_style__format.py  patch-src_3rdparty_chromium_third__party_node_node.py  patch-src_3rdparty_chromium_tools_json__schema__compiler_feature__compiler.py  patch-src_3rdparty_chromium_tools_licenses_licenses.py  patch-src_3rdparty_gn_build_gen.py
(+37660 files in other folders)
