--- cargo-crates/v8-149.2.0/build/toolchain/siso.gni.orig	2026-03-28 02:50:18 UTC
+++ cargo-crates/v8-149.2.0/build/toolchain/siso.gni
@@ -4,12 +4,10 @@ import("//build/config/gclient_args.gni")
 # use_siso_default is default value of use_siso.
 # need to match with autoninja's logic.
 use_siso_default = false
-
-_is_ninja_used = path_exists(rebase_path(".ninja_deps", root_build_dir))
-
-if (path_exists("//build/config/siso/.sisoenv") &&
-    defined(build_with_chromium) && build_with_chromium && !_is_ninja_used) {
-  use_siso_default = true
+#
+# MidnightBSD still ships GN 1962, which does not provide path_exists().
+# rust-v8 only needs plain ninja builds here, so keep siso disabled.
+if (false) {
 }
 
 declare_args() {
