--- .gn.orig	2025-02-03 00:00:00 UTC
+++ .gn
@@ -171,6 +171,28 @@ exec_script_allowlist =
 
       "//google_apis/BUILD.gn",
       "//printing/BUILD.gn",
+
+      "//third_party/electron_node/node.gni",
+      "//third_party/electron_node/unofficial.gni",
+      "//third_party/electron_node/deps/simdjson/unofficial.gni",
+      "//third_party/electron_node/deps/ada/unofficial.gni",
+      "//third_party/electron_node/deps/brotli/unofficial.gni",
+      "//third_party/electron_node/deps/cares/unofficial.gni",
+      "//third_party/electron_node/deps/googletest/unofficial.gni",
+      "//third_party/electron_node/deps/histogram/unofficial.gni",
+      "//third_party/electron_node/deps/llhttp/unofficial.gni",
+      "//third_party/electron_node/deps/nbytes/unofficial.gni",
+      "//third_party/electron_node/deps/ncrypto/unofficial.gni",
+      "//third_party/electron_node/deps/nghttp2/unofficial.gni",
+      "//third_party/electron_node/deps/ngtcp2/unofficial.gni",
+      "//third_party/electron_node/deps/openssl/unofficial.gni",
+      "//third_party/electron_node/deps/simdutf/unofficial.gni",
+      "//third_party/electron_node/deps/sqlite/unofficial.gni",
+      "//third_party/electron_node/deps/uv/unofficial.gni",
+      "//third_party/electron_node/deps/uvwasi/unofficial.gni",
+      "//third_party/electron_node/deps/v8/build_overrides/build.gni",
+      "//third_party/electron_node/deps/zstd/unofficial.gni",
+      "//third_party/electron_node/src/inspector/unofficial.gni",
 
       "//remoting/host/installer/linux/BUILD.gn",
       "//remoting/remoting_version.gni",
