--- content/public/common/BUILD.gn.orig	2025-02-03 00:00:00 UTC
+++ content/public/common/BUILD.gn
@@ -367,6 +367,7 @@ mojom("interfaces") {
   # Must depend on //content/public/common/ instead, for component build.
   visibility = [
     ":common_sources",
+    "//electron/shell/common:*",
     "//chrome/browser/ash/magic_boost",
     "//chrome/browser/ash/policy/dlp/dialogs",
     "//chrome/common:mojo_bindings",
