--- cargo-crates/v8-149.2.0/buildtools/third_party/libc++/BUILD.gn.orig	2026-06-11 12:00:00.000000000 -0400
+++ cargo-crates/v8-149.2.0/buildtools/third_party/libc++/BUILD.gn	2026-06-11 12:00:00.000000000 -0400
@@ -86,23 +86,9 @@
   # TODO(crbug.com/503250165): copy_libcxx_headers does not handle file
   # removals correctly.  It'd probably better if it used a script that took all
   # files either on the commandline or in a response file, and that then
   # deleted the outdir before copying over all files. That way, when files are
   # added or removed, ninja's commandline tracking logic will notice file
   # removals. For now, this action deletes one file where removal is important.
-  action("remove_float_h") {
-    script = "//build/rm.py"
-    stamp = "$target_gen_dir/clean_up_float_h_stamp"
-    outputs = [ stamp ]
-    args = [
-      "--stamp",
-      rebase_path(stamp, root_build_dir),
-      "-f",
-      "gen/third_party/libc++/src/include/float.h",
-    ]
-
-    visibility = [ ":headers" ]
-  }
-
   # Note: there are setups where clang_modules is enabled for some, but not all,
   # toolchains (see https://crrev.com/c/6849070). So, this copy must happen
   # unconditionally.
@@ -130,7 +116,6 @@
   if (use_clang_modules && !use_unified_system_module) {
     deps = [
       ":copy_custom_headers($default_toolchain)",
       ":copy_libcxx_headers($default_toolchain)",
-      ":remove_float_h($default_toolchain)",
     ]
   }
 }
