--- build/config/sysroot.gni.orig	2022-09-13 19:38:09 UTC
+++ build/config/sysroot.gni
@@ -21,9 +21,7 @@

   # Controls default is_linux sysroot. If set to true, and sysroot
   # is empty, default sysroot is calculated.
-  use_sysroot = current_cpu == "x86" || current_cpu == "x64" ||
-                current_cpu == "arm" || current_cpu == "arm64" ||
-                current_cpu == "mipsel" || current_cpu == "mips64el"
+  use_sysroot = false
 }

 if (sysroot == "") {
